--- a/index.html
+++ b/index.html
@@ -47,7 +47,30 @@
                 <h2 id="D20240426">April 26th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Beneath the Surface [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Skyrim Special Edition: Legacy of the Dragonborn [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Will You Snail? [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease APWorld</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>s
                 </ul>
 
                 <h2 id="D20240425">April 25th, 2024</h2>
@@ -87,6 +110,7 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Sekiro: Shadows Die Twice [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
