--- a/apworlds.html
+++ b/apworlds.html
@@ -810,7 +810,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/DeamonHunter/ArchipelagoMuseDash/releases">Link</a>]</li>
-                    <li><strong>Prerelease APWorld + Game Mod</strong> 
+                    <li><strong>Prerelease APWorld + Game Mod</strong> v1.4.7+ [<a href="https://github.com/DeamonHunter/ArchipelagoMuseDash/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Muse%20Dash/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148331097705414796">Link</a>]</li>
                 </ul>
