--- a/index.html
+++ b/index.html
@@ -44,11 +44,31 @@
                     </p>
                 </header>
 
+                <h2 id="D20240427">April 27th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Clubhouse Games: 51 Worldwide Classics [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240426">April 26th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
@@ -60,7 +80,9 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Bejeweled 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Beneath the Surface [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Skyrim Special Edition: Legacy of the Dragonborn [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Will You Snail? [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
@@ -70,7 +92,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>s
+                    <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240425">April 25th, 2024</h2>
@@ -145,6 +167,10 @@
                     <li><strong>Manual APWorld Update</strong> Outer Wilds [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Kingdom Hearts 1 Final Mix [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3201">Link</a>]</li>
                 </ul>
 
                 <ul>
