--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
                     </p>
                 </header>
 
+                <h2 id="D20240428">April 28th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Shapez.io [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240427">April 27th, 2024</h2>
 
                 <ul>
@@ -57,6 +73,7 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Clubhouse Games: 51 Worldwide Classics [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Zelda CD-I [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
