--- a/index.html
+++ b/index.html
@@ -44,11 +44,18 @@
                     </p>
                 </header>
 
+                <h2 id="D20240429">April 29th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240428">April 28th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -57,7 +64,17 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Mario Party Superstars [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Shapez.io [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Deep Rock Galactic [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Tower Unite [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240427">April 27th, 2024</h2>
