--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                     <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
                 </ul>
 
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Emerald [<a href="apworlds.html#PokemonEmerald">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240425">April 25th, 2024</h2>
 
                 <ul>
