--- a/index.html
+++ b/index.html
@@ -47,7 +47,32 @@
                 <h2 id="D20240429">April 29th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>   
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Pokemon HeartGold & SoulSilver (Fishing) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Tower Unite [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Castlevania: Rondo of Blood [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> HuniePop [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240428">April 28th, 2024</h2>
