--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240430">April 30th, 2024</h2>
+                
+                <ul>
+                    <li><strong>APWorld Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Saving Princess [<a href="apworlds.html#SavingPrincess">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240429">April 29th, 2024</h2>
 
                 <ul>
