--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (157)</h2>
+                <h2>APWorlds (158)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -1046,6 +1046,15 @@
                     <li><strong>Game Mod</strong> [<a href="https://ficsit.app/mod/Archipelago">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Jarno458/Archipelago/blob/Satisfactory/worlds/satisfactory/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1018853131859267656">Link</a>]</li>
+                </ul>
+
+                <h3><span id="SavingPrincess"></span> Saving Princess (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/LeonarthCG/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/LeonarthCG/saving-princess-archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/LeonarthCG/saving-princess-archipelago/blob/main/SETUP.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1234882000087941192">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ScoobyDooNightOf100Frights"></span> Scooby-Doo! Night of 100 Frights (GC)</h3>
