--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (158)</h2>
+                <h2>APWorlds (159)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -315,6 +315,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/Anguirel86/Jets-of-Time-Tracker">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Anguirel86/Archipelago/blob/ctjot/worlds/ctjot/docs/multiworld_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1063559984148906035">Link</a>]</li>
+                </ul>
+
+                <h3><span id="CivilizationVI"></a> Civilization VI (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/hesto2/civilization_vi_apworld/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/hesto2/civilization_vi_apworld/blob/main/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1235473969487024189">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Clique"></a> Clique (Web)</h3>
@@ -804,6 +812,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Gtaray/archipelago-monstersanctuary/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Cyb3RGER/monster_sanctuary_ap_pack/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Gtaray/archipelago-monstersanctuary/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1217944663864901632">Link</a>]</li>
                 </ul>
 
@@ -1285,6 +1294,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/tanjo3/tww_apworld/releases">Link</a>]</li>
+                    <li><strong>Patcher</strong> [<a href="https://github.com/tanjo3/wwrando/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ouro-dev/ww-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/tanjo3/tww_apworld/blob/master/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1080383306748678165">Link</a>]</li>
