--- a/index.html
+++ b/index.html
@@ -46,17 +46,38 @@
                     </p>
                 </header>
 
+                <h2 id="D20240503">May 3rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Pokemon HeartGold & SoulSilver (Fishing) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240502">May 2nd, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
                     <li><strong>APWorld Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -66,6 +87,15 @@
                 
                 <ul>
                     <li><strong>New APWorld</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Streets of Rogue [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240501">May 1st, 2024</h2>
