--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (159)</h2>
+                <h2>APWorlds (160)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -213,8 +213,8 @@
                 <h3><span id="BombRushCyberfunk"></a> Bomb Rush Cyberfunk (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1217870614677815347">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1217870614677815347">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1236097987265036339">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1236097987265036339">Link</a>]</li>
                     <li><strong>Optional Game Mod</strong> [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/TRPG/MoreMap/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Jay/CutsceneSkip/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Yuri/GimmeMyBoost/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/viliger/DisableAnnoyingCutscenes/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/tari/FastTravel/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1158243448554528831">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141808261348212836">Link</a>]</li>
@@ -1146,6 +1146,15 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/chandler05/Stacklands-Randomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1151149079238299719/1162586378710810705">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1151149079238299719">Link</a>]</li>
+                </ul>
+
+                <h3><span id="StarWarsEpisode1Racer"></span> Star Wars: Episode I Racer (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/wcolding/SWR_apworld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/wcolding/SWR_AP_Client/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/wcolding/SWR_apworld/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1207274588120158269">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Starcraft2"></span> Starcraft 2 (PC)</h3>
