--- a/apworlds.html
+++ b/apworlds.html
@@ -88,6 +88,7 @@
                     <li><strong>APWorld + Client</strong> [<a href="https://github.com/CookieCat45/Archipelago-ahit/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3026842601">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Fouton/HatInTimeRando-Poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker (Alternate)</strong> [<a href="https://github.com/Mysteryem/ahit-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/CookieCat45/Archipelago-ahit/blob/main/worlds/ahit/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1120157130100572260">Link</a>]</li>
                 </ul>
@@ -1406,7 +1407,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1231599123883364383">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1236419699839860836">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
