--- a/index.html
+++ b/index.html
@@ -46,17 +46,43 @@
                     </p>
                 </header>
 
+                <h2 id="D20240505">May 5th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Celeste 64: <em>v1.2 Content Update</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3210">Link</a>]</li>
+                    <li><strong>Game Update Merged</strong> Pokemon Emerald: <em>Convert to procedure patch (ROM-Free Generation)</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2995">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240504">May 4th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Saving Princess [<a href="apworlds.html#SavingPrincess">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain 2 [<a href="apworlds.html#RiskOfRain2">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -68,8 +94,18 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Game PR Opened</strong> Wario Land 4 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3266">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Manual APWorld</strong> Puyo-Puyo Tetris 2 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Team Fortress 2 - Mann vs Machine [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Risk of Rain 2 [<a href="apworlds.html#RiskOfRain2">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240503">May 3rd, 2024</h2>
@@ -103,6 +139,7 @@
 
                 <ul>
                     <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man 2 [<a href="apworlds.html#MegaMan2">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
                     <li><strong>APWorld Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
@@ -122,6 +159,10 @@
                 
                 <ul>
                     <li><strong>New APWorld</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Mega Man 2 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3256">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -180,6 +221,10 @@
 
                 <ul>
                     <li><strong>New APWorld</strong> Saving Princess [<a href="apworlds.html#SavingPrincess">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Saving Princess [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3238">Link</a>]</li>
                 </ul>
 
                 <ul>
