--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>New APWorld</strong> Star Wars: Episode I RacerStar Wars: Episode I Racer [<a href="apworlds.html#StarWarsEpisodeIRacer">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Star Wars: Episode I Racer [<a href="apworlds.html#StarWarsEpisodeIRacer">Link</a>]</li>
                 </ul>
 
                 <ul>
