--- a/apworlds.html
+++ b/apworlds.html
@@ -288,6 +288,7 @@
                     <li><strong>Beta APWorld</strong> v1.2.x [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
                     <li><strong>Beta Game Mod</strong> v1.2.x [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
+                    <li><strong>Beta Tracker</strong> v1.2.x [<a href="https://github.com/PoryGone/Celeste-64-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Celeste%2064/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388599160635552">Link</a>]</li>
                 </ul>
