--- a/index.html
+++ b/index.html
@@ -46,15 +46,26 @@
                     </p>
                 </header>
 
+                <h2 id="D20240506">May 6th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240505">May 5th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
                 </ul>
 
@@ -65,6 +76,7 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Smash Bros Melee (Slippi) [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240504">May 4th, 2024</h2>
