--- a/index.html
+++ b/index.html
@@ -49,8 +49,19 @@
                 <h2 id="D20240506">May 6th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Deep Rock Galactic [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Team Fortress 2 - Mann vs Machine [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Mario and Luigi: Superstar Saga [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2754">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240505">May 5th, 2024</h2>
