--- a/apworlds.html
+++ b/apworlds.html
@@ -552,6 +552,7 @@
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1232531162791018536">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1228893356596265000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1072687192360624218">Link</a>]</li>
                 </ul>
@@ -634,6 +635,7 @@
 
                 <ul>
                     <li><strong>APWorld + Connector + Setup Guide</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKHCOM/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1074710550384234587/1237147967597711391">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1074710550384234587">Link</a>]</li>
                 </ul>
 
