--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
                     </p>
                 </header>
 
+                <h2 id="D20240507">May 7th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240506">May 6th, 2024</h2>
 
                 <ul>
@@ -53,6 +65,11 @@
                     <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
                     <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Star Wars: Episode I Racer [<a href="apworlds.html#StarWarsEpisodeIRacer">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -64,10 +81,19 @@
                     <li><strong>New Game Merged</strong> Mario and Luigi: Superstar Saga [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2754">Link</a>]</li>
                 </ul>
 
+                <ul>
+                    <li><strong>New Tracker</strong> Kingdom Hearts: Chain of Memories [<a href="apworlds.html#KingdomHeartsChainOfMemories">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240505">May 5th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
                 </ul>
@@ -75,6 +101,7 @@
                 <ul>
                     <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
