--- a/index.html
+++ b/index.html
@@ -46,10 +46,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240508">May 8th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Guardian Legend [<a href="apworlds.html#TheGuardianLegend">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240507">May 7th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
                 </ul>
 
