--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (160)</h2>
+                <h2>APWorlds (161)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -1141,6 +1141,13 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/Tranquilite0/Archipelago/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Tranquilite0/Archipelago/blob/soulblazer/worlds/soulblazer/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209689725057761310">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Spelunker"></span> Spelunker (NES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1237999589907234938/1238004674347401237">Link</a>]</li>
+                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1237999589907234938">Link</a>]
                 </ul>
 
                 <h3><span id="Stacklands"></span> Stacklands (PC)</h3>
