--- a/apworlds.html
+++ b/apworlds.html
@@ -752,6 +752,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm2/worlds/mm2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141248361316503553">Link</a>]</li>
                 </ul>
 
