--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
                     </p>
                 </header>
 
+                <h2 id="D20240512">May 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240511">May 11th, 2024</h2>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Phasmophobia [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Super Mario 64 (Generic) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240510">May 10th, 2024</h2>
 
                 <ul>
