--- a/apworlds.html
+++ b/apworlds.html
@@ -868,8 +868,7 @@
                 <h3><span id="OpenRCT2"></span> OpenRCT2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> File is checked in the repository [<a href="https://github.com/Crazycolbster/Archipelago/tree/General_Killmore/worlds">Link</a>]</li>
-                    <li><strong>Game Mod</strong> File is in the build artifacts [<a href="https://github.com/Crazycolbster/rollercoaster-tycoon-randomizer/actions">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Crazycolbster/rollercoaster-tycoon-randomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Crazycolbster/Archipelago/blob/General_Killmore/worlds/openrct2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1095746758774108240">Link</a>]</li>
                 </ul>
@@ -1183,6 +1182,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/agilbert1412/StardewArchipelago/blob/5.x.x/Documentation/Supported%20Mods.md">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</stron1g> [<a href="https://drive.google.com/drive/folders/1gtEH3G2cHNIv7cTWn94sfjOh1DvCsVWo">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Stardew%20Valley/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090823633099833464">Link</a>]</li>
                 </ul>
