--- a/index.html
+++ b/index.html
@@ -46,15 +46,42 @@
                     </p>
                 </header>
 
+                <h2 id="D20240513">May 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Fire Emblem: The Sacred Stones [<a href="apworlds.html#FireEmblemTheSacredStones">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240512">May 12th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Old School Runescape [<a href="apworlds.html#OldSchoolRunescape">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240511">May 11th, 2024</h2>
