--- a/index.html
+++ b/index.html
@@ -46,15 +46,43 @@
                     </p>
                 </header>
 
+                <h2 id="D20240514">May 14th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Kirby Triple Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Legends: Arceus [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Castlevania: Circle of the Moon [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3299">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Ratchet & Clank 3: Up Your Arsenal [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240513">May 13th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Fire Emblem: The Sacred Stones [<a href="apworlds.html#FireEmblemTheSacredStones">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Spelunker [<a href="apworlds.html#Spelunker">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240512">May 12th, 2024</h2>
