--- a/apworlds.html
+++ b/apworlds.html
@@ -599,6 +599,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Ishigh1/ITB-randomizer-for-AP/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Ishigh1/Archipelago/blob/into-the-breach/worlds/into_the_breach/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1127025077196701828">Link</a>]</li>
                 </ul>
 
