--- a/index.html
+++ b/index.html
@@ -46,14 +46,35 @@
                     </p>
                 </header>
 
+                <h2 id="D20240515">May 15th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Deep Rock Galactic [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240514">May 14th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
@@ -67,6 +88,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Blast Corps [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Ratchet & Clank 3: Up Your Arsenal [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
