--- a/apworlds.html
+++ b/apworlds.html
@@ -1327,6 +1327,8 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> 0.4.7 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> 6.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/NewSoupVi/witness_archipelago_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Witness/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/980554001231786014">Link</a>]</li>
@@ -1467,6 +1469,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1224389973336133743/1224394834857427045">Link</a>]</li>
+                    <li><strong>Tracker (Alternate)</strong> [<a href="https://github.com/Radagast81/yoshis-island-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Yoshi's%20Island/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389973336133743">Link</a>]</li>
                 </ul>
