--- a/index.html
+++ b/index.html
@@ -53,12 +53,20 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Game Mod Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Deep Rock Galactic [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Yoshi's Island [<a href="apworlds.html#YoshisIsland">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -81,6 +89,14 @@
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Kirby Triple Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Pokemon Legends: Arceus [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
