--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (161)</h2>
+                <h2>APWorlds (162)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -605,7 +605,16 @@
 
                 <span id="J"></span>
 
-                <h3><span id="K"></span><span id="KingdomHearts1"></span> Kingdom Hearts 1 Final Mix (PC)</h3>
+                <h3><span id="K"></span><span id="KeepTalkingAndNobodyExplodes"></span> Keep Talking and Nobody Explodes (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/GreenPower713/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3247225189">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/GreenPower713/Archipelago/blob/main/worlds/ktane/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1058549067107532840">Link</a>]</li>
+                </ul>
+
+                <h3><span id="KingdomHearts1"></span> Kingdom Hearts 1 Final Mix (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/gaithernOrg/KH1FM-AP/releases">Link</a>]</li>
@@ -1421,7 +1430,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1236419699839860836">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1240697348129161367">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
