--- a/index.html
+++ b/index.html
@@ -46,10 +46,45 @@
                     </p>
                 </header>
 
+                <h2 id="D20240517">May 17th, 2024</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.4.7 RC1 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1240978139279265914">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Aquaria [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3197">Link</a>]</li>
+                    <li><strong>New Game Merged</strong> Bomb Rush Cyberfunk [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2925">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Doors (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240516">May 16th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Old School Runescape [<a href="apworlds.html#OldSchoolRunescape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle Nights [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Rhythm Doctor [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Keep Talking and Nobody Explodes [<a href="apworlds.html#KeepTalkingAndNobodyExplodes">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240515">May 15th, 2024</h2>
