--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (162)</h2>
+                <h2>APWorlds (163)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -557,6 +557,15 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1072687192360624218">Link</a>]</li>
                 </ul>
 
+                <h3><span id="HatsuneMikuProjectDIVAMegaMix"></span> Hatsune Miku: Project DIVA Mega Mix+ (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/DivaAPworld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://gamebanana.com/mods/514140">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Cynichill/DivaAPworld/blob/main/docs/en_Mega_Mix.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241134454391443580">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Heretic"></span> Heretic (PC)</h3>
 
                 <ul>
@@ -653,6 +662,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Prerelease APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1224389195485806703/1241323359346757642">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kirby's%20Dream%20Land%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389195485806703">Link</a>]</li>
                 </ul>
