--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
                 <h2 id="D20240518">May 18th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Core Update Merged</strong> WebHost: Massive overhaul of options pages [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2614">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Blast Corps [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Shapez [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease APWorld</strong> Kirby's Dream Land 3 [<a href="apworlds.html#KirbysDreamLand3">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240517">May 17th, 2024</h2>
