--- a/index.html
+++ b/index.html
@@ -46,13 +46,36 @@
                     </p>
                 </header>
 
+                <h2 id="D20240521">May 21st, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Putt-Putt [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240520">May 20th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Legacy of Darkness [<a href="apworlds.html#CastlevaniaLegacyOfDarkness">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sentinels of the Multiverse [<a href="apworlds.html#SentinelsOfTheMultiverse">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -61,7 +84,25 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Game Merged</strong> A Hat in Time [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2640">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Arctic Eggs [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Little Inferno [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240519">May 19th, 2024</h2>
