--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (164)</h2>
+                <h2>APWorlds (165)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -806,6 +806,14 @@
                     <li><strong>Game Download</strong> [<a href="https://github.com/FelicitusNeko/meritous-ap/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Meritous/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959202754188963880">Link</a>]</li>
+                </ul>
+
+                <h3><span id="MetroidPrime"></span> Metroid Prime (GC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/blob/main/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1172631093837570068">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Minecraft"></span> Minecraft (PC)</h3>
